--- a/mtsk-client/Rakefile
+++ b/mtsk-client/Rakefile
@@ -10,7 +10,7 @@ Rake::RDocTask.new do |rd|
   rd.title = 'Your application title'
 end
 
-spec = eval(File.read('spritprice.gemspec'))
+spec = eval(File.read('mtsk-client.gemspec'))
 
 Gem::PackageTask.new(spec) do |pkg|
 end
